[package]
name = "rust-rdkafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.32.2", features = ["cmake-build"] }

tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.19"
rand = "0.8.5"
regex = "1.8.4"
async-std = { version = "1.12.0", features = ["attributes"] }
backoff = "0.1.5"
chrono = "0.4.0"
clap = {version="4.3.8",features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
java-properties = "2.0.0"
base64 = "0.21.2"
serde_json = "1.0.99"
threadpool = "1.8.1"
glob = "0.3.1"

[[bin]]
name = "producer"
path = "src/producer.rs"


[[bin]]
name = "consumer"
path = "src/consumer.rs"

[[bin]]
name="exporter"
path = "src/exporter.rs"

[[bin]]
name="importer"
path="src/importer.rs"

[[bin]]
name="test"
path="src/test.rs"