[package]
name = "kafka-exporter-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.33.2", features = ["cmake-build", "ssl-vendored"] }

tokio = { version = "1.28.2", features = ["full", "rt"] }
log = "0.4.19"
rand = "0.8.5"
regex = "1.9.1"
async-std = { version = "1.12.0", features = ["attributes"] }
backoff = "0.1.5"
chrono = "0.4.0"
clap = {version="4.3.11",features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
java-properties = "2.0.0"
base64 = "0.21.2"
serde_json = "1.0.102"
threadpool = "1.8.1"
glob = "0.3.1"
hyper = { version =  "0.14.27", features = ["full"] }
http = "0.2.9"
http-body = "=1.0.0-rc.2"
http-body-util = { version = "=0.1.0-rc.3", optional = true }
httpdate = "1.0.2"
httparse = "1.8.0"
hyper-rustls = "0.24.1"
rustls = "0.21.5"
rustls-pemfile = "1.0.3"
rustls-native-certs = "0.6.3"
lazy_static = "1.4.0"

[build-dependencies]
openssl-src = { version = "111", features = ["force-engine"] }

[[bin]]
name = "producer"
path = "src/producer.rs"


[[bin]]
name = "consumer"
path = "src/consumer.rs"

[[bin]]
name="exporter"
path = "src/exporter.rs"

[[bin]]
name="importer"
path="src/importer.rs"

[[bin]]
name="test"
path="src/test.rs"

[[bin]]
name="test2"
path="src/test2.rs"