[package]
name = "kafka-exporter-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.33.2", features = ["cmake-build", "ssl-vendored"] }
tokio = { version = "1.32", features = ["full", "rt"] }
log = "0.4"
rand = "0.8"
regex = "1.9"
async-std = { version = "1.12", features = ["attributes"] }
backoff = "0.4"
chrono = "0.4"
clap = {version="4.3",features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
java-properties = "2"
base64 = "0.21"
serde_json = "1.0"
threadpool = "1.8"
glob = "0.3"
hyper = { version =  "0.14", features = ["full"] }
http = "0.2.9"
http-body = "=1.0.0-rc.2"
http-body-util = { version = "=0.1.0-rc.3", optional = true }
httpdate = "1.0"
httparse = "1.8"
hyper-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
rustls-native-certs = "0.6"
lazy_static = "1.4"

[build-dependencies]
openssl-src = { version = "111", features = ["force-engine"] }

[[bin]]
name = "producer"
path = "src/producer.rs"


[[bin]]
name = "consumer"
path = "src/consumer.rs"

[[bin]]
name="exporter"
path = "src/exporter.rs"

[[bin]]
name="importer"
path="src/importer.rs"

[[bin]]
name="test"
path="src/test.rs"

[[bin]]
name="test2"
path="src/test2.rs"
